Fixed Layout Bugs

--- a/app/styles/page.module.css
+++ b/app/styles/page.module.css
@@ -138,6 +138,10 @@
 
 
 @media screen and (max-width: 1000px) {
+  /* .wrapper {
+    padding-bottom: 150px;
+  } */
+  
   .container {
     display: none;
   }
@@ -148,12 +152,13 @@
 
   .footer {
     width: 100%;
-    /* height: 150px; */
+    height: 150px;
     /* position: fixed; */
     bottom: 0;
     display: flex;
     flex-direction: column;
     z-index: 900;
+ 
   }
 
   .footerStart, 
